traduction files fix & master command

--- a/src/org/starloco/locos/data/translation/en_EN.yaml
+++ b/src/org/starloco/locos/data/translation/en_EN.yaml
@@ -101,15 +101,35 @@ command.commandplayer.master.noavailable: "The player was not found."
 command.commandplayer.master.nogroup.atuser: "You are not in the player's group indicate."
 command.commandplayer.master.follow: "Now you follow #1."
 command.commandplayer.master.master: "You are now the master."
+command.commandplayer.followmap.nomaster: "Enable master mode before using this command."
+command.commandplayer.followmap.notmaster: "Only the current master (#1) can change this setting."
+command.commandplayer.followmap.on: "Followers will now mirror your moves on the same map."
+command.commandplayer.followmap.off: "Followers will no longer mirror your moves on the same map."
 command.commandplayer.transfer.noinbank: "You're not in your bank."
 command.commandplayer.transfer.waitting: "Please wait a few moments .."
 command.commandplayer.transfer.good: "The transfer has been made, #1 object (s) have been moved."
+command.commandplayer.transfer.bank.title: "Bank"
+command.commandplayer.transfer.master.title: "Transfer"
+command.commandplayer.transfer.master.success: "#1 object(s) retrieved."
 command.commandplayer.vip: "VIP BONUS: Vote * 2 & Exp * 1.5 & Items Chest & '.life, .transfer' & Unlimited Mode & .interval & .pass"
 command.commandplayer.pass: "Your player will now pass his turn Disable with .pass"
 command.commandplayer.pass.error: "Your player does not have a master."
 command.commandplayer.interval.error: "The digit does not match, please try again with a valid digit."
 command.commandplayer.interval.master: "You must be in a group with a master to use this command."
 command.commandplayer.interval: "You have set an interval, your player will enter the fight after this delay (in seconds)"
+command.commandplayer.unlock.usage.direction: "Usage: .unlock up/down/left/right"
+command.commandplayer.unlock.direction.unknown: "Unknown direction."
+command.commandplayer.unlock.nomap: "No map at #1,#2"
+command.commandplayer.unlock.already: "Map #1 is already unlocked."
+command.commandplayer.unlock.notenough: "Not enough tileman credits."
+command.commandplayer.unlock.success: "Unlocked map #1. Credits left: #2."
+command.commandplayer.unlock.unknown.map: "Unknown map #1."
+command.commandplayer.unlockid.usage: "Usage: .unlockid mapId"
+command.commandplayer.unlockid.usage.format: "Usage: .unlockid <mapId>"
+command.commandplayer.autounlock.enabled: "Auto unlock enabled."
+command.commandplayer.autounlock.disabled: "Auto unlock disabled."
+command.commandplayer.tileman.title: "Tileman"
+command.commandplayer.tileman.message: "Map Credits: #1 / Map Credit XP: #2 / XP to next credit: #3"
 
 dynamic.formuleofficiel.exp: "You have gained #1 additional experience with your subscription bonus."
 
