--- a/src/org/starloco/locos/data/translation/fr_FR.yaml
+++ b/src/org/starloco/locos/data/translation/fr_FR.yaml
@@ -103,15 +103,35 @@ command.commandplayer.master.noavailable: "Le joueur est introuvable."
 command.commandplayer.master.nogroup.atuser: "Tu n'es pas dans le groupe du joueur indiquer."
 command.commandplayer.master.follow: "Vous suivez désormais #1."
 command.commandplayer.master.master: "Vous êtes désormais le maitre."
+command.commandplayer.followmap.nomaster: "Activez d'abord le mode maitre pour utiliser cette commande."
+command.commandplayer.followmap.notmaster: "Seul le maitre (#1) peut modifier ce réglage."
+command.commandplayer.followmap.on: "Les suiveurs reproduiront aussi vos déplacements sur la même carte."
+command.commandplayer.followmap.off: "Les suiveurs ne reproduiront plus vos déplacements sur la même carte."
 command.commandplayer.transfer.noinbank: "Tu n'es pas dans ta banque."
 command.commandplayer.transfer.waitting: "Veuillez patienter quelques instants.."
 command.commandplayer.transfer.good: "Le transfert a été effectué, #1 objet(s) ont été déplacés."
+command.commandplayer.transfer.bank.title: "Banque"
+command.commandplayer.transfer.master.title: "Transfert"
+command.commandplayer.transfer.master.success: "#1 objet(s) récupéré(s)."
 command.commandplayer.vip: "BONUS VIP : Vote*2 & Exp*1.5 & Coffre d'items & '.life, .transfert' & Mode en illimité & .pass & .interval"
 command.commandplayer.pass: "Votre joueur va maintenant passer son tour. Désactiver le avec .pass"
 command.commandplayer.pass.error: "Votre joueur ne possède pas de maitre."
 command.commandplayer.interval.error: "Le chiffre indiqué ne correspond pas, veuillez ressayer avec un chiffre valide."
 command.commandplayer.interval.master: "Vous devez être dans un groupe avec un maitre pour utiliser cette commande."
 command.commandplayer.interval: "Vous venez de configurer un interval, votre joueur rentrera dans le combat après ce delai. (en seconde)"
+command.commandplayer.unlock.usage.direction: "Utilisation : .unlock up/down/left/right"
+command.commandplayer.unlock.direction.unknown: "Direction inconnue."
+command.commandplayer.unlock.nomap: "Aucune carte en #1,#2"
+command.commandplayer.unlock.already: "La carte #1 est déjà débloquée."
+command.commandplayer.unlock.notenough: "Crédits Tileman insuffisants."
+command.commandplayer.unlock.success: "Carte #1 débloquée. Crédits restants : #2."
+command.commandplayer.unlock.unknown.map: "Carte inconnue #1."
+command.commandplayer.unlockid.usage: "Utilisation : .unlockid mapId"
+command.commandplayer.unlockid.usage.format: "Utilisation : .unlockid <mapId>"
+command.commandplayer.autounlock.enabled: "Déblocage automatique activé."
+command.commandplayer.autounlock.disabled: "Déblocage automatique désactivé."
+command.commandplayer.tileman.title: "Tileman"
+command.commandplayer.tileman.message: "Crédits de carte : #1 / XP de crédit de carte : #2 / XP avant le prochain crédit : #3"
 
 dynamic.formuleofficiel.exp: "Vous avez gagné #1 d'expérience supplémentaire grâce à votre bonus d'abonnement."
 
