--- a/src/org/starloco/locos/data/translation/pt_PT.yaml
+++ b/src/org/starloco/locos/data/translation/pt_PT.yaml
@@ -101,15 +101,35 @@ command.commandplayer.master.noavailable: "El jugador no se encontró"
 command.commandplayer.master.nogroup.atuser: "No estás en el grupo indicado por el jugador"
 command.commandplayer.master.follow: "Ahora sigues #1."
 command.commandplayer.master.master: "Ahora eres el maestro"
+command.commandplayer.followmap.nomaster: "Ative o modo mestre antes de usar este comando."
+command.commandplayer.followmap.notmaster: "Apenas o mestre atual (#1) pode alterar esta opção."
+command.commandplayer.followmap.on: "Os seguidores agora copiarão os seus movimentos no mesmo mapa."
+command.commandplayer.followmap.off: "Os seguidores já não copiarão os seus movimentos no mesmo mapa."
 command.commandplayer.transfer.noinbank: "No estás en tu banco"
 command.commandplayer.transfer.waitting: "Espere unos momentos ..."
 command.commandplayer.transfer.good: "La transferencia se ha realizado, se han movido objetos #1"
+command.commandplayer.transfer.bank.title: "Banco"
+command.commandplayer.transfer.master.title: "Transferência"
+command.commandplayer.transfer.master.success: "#1 objeto(s) recuperado(s)."
 command.commandplayer.vip: "VIP BONUS: Vote * 2 & Exp * 1.5 & Items Chest & '.life, .transfer' & Modo ilimitado & .interval & .pass"
 command.commandplayer.pass: "Tu jugador ahora pasará su turno Inhabilitar con .pass"
 command.commandplayer.pass.error: "Tu jugador no tiene un maestro."
 command.commandplayer.interval.error: "El dígito no coincide, intente de nuevo con un dígito válido."
 command.commandplayer.interval.master: "Debes estar en un grupo con un maestro para usar este comando."
 command.commandplayer.interval: "Has establecido un intervalo, tu jugador entrará en la pelea después de este retraso (en segundos)"
+command.commandplayer.unlock.usage.direction: "Uso: .unlock up/down/left/right"
+command.commandplayer.unlock.direction.unknown: "Direção desconhecida."
+command.commandplayer.unlock.nomap: "Nenhum mapa em #1,#2"
+command.commandplayer.unlock.already: "O mapa #1 já está desbloqueado."
+command.commandplayer.unlock.notenough: "Créditos Tileman insuficientes."
+command.commandplayer.unlock.success: "Mapa #1 desbloqueado. Créditos restantes: #2."
+command.commandplayer.unlock.unknown.map: "Mapa desconhecido #1."
+command.commandplayer.unlockid.usage: "Uso: .unlockid mapId"
+command.commandplayer.unlockid.usage.format: "Uso: .unlockid <mapId>"
+command.commandplayer.autounlock.enabled: "Desbloqueio automático ativado."
+command.commandplayer.autounlock.disabled: "Desbloqueio automático desativado."
+command.commandplayer.tileman.title: "Tileman"
+command.commandplayer.tileman.message: "Créditos de mapa: #1 / XP de crédito de mapa: #2 / XP para o próximo crédito: #3"
 
 dynamic.formuleofficiel.exp: "Has ganado experiencia adicional #1 con tu bono de suscripción"
 
