--- a/src/org/starloco/locos/data/translation/es_ES.yaml
+++ b/src/org/starloco/locos/data/translation/es_ES.yaml
@@ -101,15 +101,35 @@ command.commandplayer.master.noavailable: "El jugador no se encontró"
 command.commandplayer.master.nogroup.atuser: "No estás en el grupo indicado por el jugador"
 command.commandplayer.master.follow: "Ahora sigues #1."
 command.commandplayer.master.master: "Ahora eres el maestro"
+command.commandplayer.followmap.nomaster: "Activa el modo maestro antes de usar este comando."
+command.commandplayer.followmap.notmaster: "Solo el maestro actual (#1) puede cambiar esta opción."
+command.commandplayer.followmap.on: "Los seguidores ahora copiarán tus movimientos en el mismo mapa."
+command.commandplayer.followmap.off: "Los seguidores ya no copiarán tus movimientos en el mismo mapa."
 command.commandplayer.transfer.noinbank: "No estás en tu banco"
 command.commandplayer.transfer.waitting: "Espere unos momentos ..."
 command.commandplayer.transfer.good: "La transferencia se ha realizado, se han movido objetos #1"
+command.commandplayer.transfer.bank.title: "Banco"
+command.commandplayer.transfer.master.title: "Transferencia"
+command.commandplayer.transfer.master.success: "#1 objeto(s) recuperado(s)."
 command.commandplayer.vip: "VIP BONUS: Vote * 2 & Exp * 1.5 & Items Chest & '.life, .transfer' & Modo ilimitado & .interval & .pass"
 command.commandplayer.pass: "Tu jugador ahora pasará su turno Inhabilitar con .pass"
 command.commandplayer.pass.error: "Tu jugador no tiene un maestro."
 command.commandplayer.interval.error: "El dígito no coincide, intente de nuevo con un dígito válido."
 command.commandplayer.interval.master: "Debes estar en un grupo con un maestro para usar este comando."
 command.commandplayer.interval: "Has establecido un intervalo, tu jugador entrará en la pelea después de este retraso (en segundos)"
+command.commandplayer.unlock.usage.direction: "Uso: .unlock up/down/left/right"
+command.commandplayer.unlock.direction.unknown: "Dirección desconocida."
+command.commandplayer.unlock.nomap: "No hay mapa en #1,#2"
+command.commandplayer.unlock.already: "El mapa #1 ya está desbloqueado."
+command.commandplayer.unlock.notenough: "No tienes suficientes créditos de Tileman."
+command.commandplayer.unlock.success: "Mapa #1 desbloqueado. Créditos restantes: #2."
+command.commandplayer.unlock.unknown.map: "Mapa desconocido #1."
+command.commandplayer.unlockid.usage: "Uso: .unlockid mapId"
+command.commandplayer.unlockid.usage.format: "Uso: .unlockid <mapId>"
+command.commandplayer.autounlock.enabled: "Desbloqueo automático habilitado."
+command.commandplayer.autounlock.disabled: "Desbloqueo automático deshabilitado."
+command.commandplayer.tileman.title: "Tileman"
+command.commandplayer.tileman.message: "Créditos de mapa: #1 / XP de crédito de mapa: #2 / XP para el siguiente crédito: #3"
 
 dynamic.formuleofficiel.exp: "Has ganado experiencia adicional #1 con tu bono de suscripción"
 
